<resources>
    <string name="app_name">AdviceCat</string>
    <string name="house_button_text">Where to live?</string>


    <string name="house_prompt">Choose a building style</string>
    <string name="house_text_description">What kind kind of house would you like to build? Choose from the dropdown the statement you like best.</string>
    <string name="intro_text">What do you need advice with today?</string>
    <string name="button_build">Building A House</string>
    <string name="marriage_button">Marriage</string>
    <string name="buy_button">Buy something</string>
    <string name="career_change">Career Change</string>
    <string name="marriage_text_description">On a scale of one to five, how much do you want to get married? (1 is not at all and 5 is a lot). </string>
    <string name="marriage_submit_button">Submit</string>
    <string name="career_advice">What kind of career would like? Choose from the dropdown the statement you like best.</string>
    <string name="test_view_buy">Mark on a scale of 1 - 5 to what extent buying this item will be positive for you (1 is bad, 5 is good).</string>
    <string name="button_description_career">Find out career</string>
    <string name="buy_button_description">Buy or not?</string>

    <string-array name="house_style_arrays">
        <item>I like to be at one with nature.</item>
        <item>I am not afraid of fires.</item>
        <item>I like things to be safe and solid.</item>
    </string-array>

    <string-array name="career_style_arrays">
        <item>I fix all my families technological problems.</item>
        <item>I have got green fingers.</item>
        <item>I am smart but I like to take risks.</item>
    </string-array>

    <string-array name="marriage_style_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
